login and registration markup added, get routes have been placed to them through vue router, have not wired laravel side up yet

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12493,7 +12493,17 @@ a.has-text-danger-dark:focus {
   padding: 3rem 1.5rem 6rem;
 }
 
-main {
-  min-height: 110vh;
+.fade-enter-active {
+  transition: all 0.3s ease;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.3s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
 
