--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,5 +5,18 @@
 @import "~bulma/bulma";
 
 main {
-    min-height: 110vh;
+}
+
+// transitions for the <router-view> component on main.blade
+.fade-enter-active {
+    transition: all 0.3s ease;
+}
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 0.3s;
+}
+
+.fade-enter,
+.fade-leave-to {
+    opacity: 0;
 }
