application's login functionality is currently broken. This is a save point prior to reworking auth functionality

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,9 @@
 //Bulma
 @import "~bulma/bulma";
 
+//icons
+//@import "~material-icons/iconfont/material-icons.css";
+
 // transitions for the <router-view> component on main.blade
 .fade-enter-active {
     transition: all 0.3s ease;
